gcc/testsuite/rust/rustc/ui/parser/keyword-try-as-identifier-edition2018.rs
// compile-flags: --edition 2018

fn main() {
    let try = "foo"; // { dg-error "" "" { target *-*-* } }
}

